--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 # Ignore executable files
 *.exe
+
+# Ignore object files
+*.o
+*.obj
+
+# Ignore build folders
+bin/
+build/
+out/
+
+# Ignore temporary files
+*.log
+*.tmp
+
+# Ignore VS Code settings (optional)
+.vscode/
